# ML_Assignment

./: .gitignore  CMakeLists.txt  README.md  REPORT.md  visualiser_planner.py
ML/: benchmark_ik.py  export_fk_onnx.py  fk_model.onnx  fk_model.pth  neural_ik_solver.py  neural_solution.csv  scaler_angles.save  scaler_pos.save  train_fk_model.py
ML/lightning_logs/version_2/: hparams.yaml  metrics.csv
ML/lightning_logs/version_3/: metrics.csv
apps/: main.cpp
include/: Capsule.h  CollisionChecker.h  IKsolver.h  JointAngles.h  NeuralIKSolver.h  Obstacle.h  Planner.h  QuinticInterpolator.h  RRTConnect.h  RobotArm.h  TrajectoryPlanner.h
src/: Capsule.cpp  CollisionChecker.cpp  IKsolver.cpp  NeuralIKSolver.cpp  Planner.cpp  QuinticInterpolator.cpp  RobotArm.cpp  TrajectoryPlanner.cpp
